# vessel

./: CMakeLists.txt  LICENSE  README.md  TODO.md  imgui.ini
docs/: TODO.md  architecture.md
src/: main.cpp
src/common/: plugins.h  protocol.h
src/gui/: main.cpp
src/rackhost/: main.cpp  plugins_runtime.cpp  plugins_runtime.h
